--- a/app/src/main/res/layout/activity_get_farm_details.xml
+++ b/app/src/main/res/layout/activity_get_farm_details.xml
@@ -159,4 +159,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Latitude" />
 
+    <Switch
+        android:id="@+id/hindi"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/inknut_antiqua_semibold"
+        android:text="SWITCH TO HINDI"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/TitleText"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/imageView"
+        app:layout_constraintTop_toTopOf="@+id/imageView" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
