--- a/app/src/main/res/layout/activity_farm_features.xml
+++ b/app/src/main/res/layout/activity_farm_features.xml
@@ -49,19 +49,18 @@
         android:id="@+id/Irrigation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="175dp"
-        android:layout_marginTop="385dp"
-        android:layout_marginEnd="236dp"
-        android:layout_marginBottom="327dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginBottom="34dp"
         android:fontFamily="@font/inknut_antiqua_semibold"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/CroppingPatternLabel"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.645" />
+        app:layout_constraintTop_toBottomOf="@+id/IrrigationLabel"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/CroppingPatternLabel"
@@ -86,15 +85,16 @@
         android:id="@+id/CroppingPattern"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="175dp"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="37dp"
-        android:layout_marginEnd="236dp"
-        android:layout_marginBottom="157dp"
+        android:layout_marginBottom="150dp"
         android:fontFamily="@font/inknut_antiqua_semibold"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.44"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/CroppingPatternLabel" />
+        app:layout_constraintTop_toBottomOf="@+id/CroppingPatternLabel"
+        app:layout_constraintVertical_bias="0.01999998" />
 </androidx.constraintlayout.widget.ConstraintLayout>
